--- a/styles.scss
+++ b/styles.scss
@@ -7,9 +7,17 @@ $secondary-color: rgb(250, 128, 195);
     color: white;
 }
 
+#heroimg {
+    width: 100%;
+}
+
 nav {
     background-color: $primary-color;
     color: white;
+}
+
+li {
+    list-style-type: none;
 }
 
 ul .nav{
@@ -41,6 +49,14 @@ section {
     margin-top: 35px;
     padding: 20px;
     font-family: 'Ubuntu', sans-serif;
+}
+
+.portfoliosect {
+    text-align: center;
+    margin-top: 35px;
+    padding: 20px;
+    font-family: 'Ubuntu', sans-serif;
+    margin-bottom: 400px;
 }
 
 h1 {
@@ -77,18 +93,30 @@ div {
     background-color: $primary-color;
 }
 
-button {
+/*button {
     color: white;
     border-radius: 40%;
     background-color: $primary-color;
     padding: 30px;
+} */
+
+button {
+    width: 200px;
+    height: 50px;
+    border-radius: 30px;
+    background-color: $primary-color;
+    border: 2px solid $primary-color;
+    transition: black;
 }
+
+
 a:link {
     color: white;
     text-decoration: none;
   }
   a:hover {
     text-decoration: underline;
+    color: white;
   }
 
 .email {
@@ -97,5 +125,14 @@ a:link {
 
 .white-border {
     border: 10px solid white;
+}
+
+iframe {
+    border: 1px solid black;
+    float: right;
+}
+
+#portfolioimg {
+    float: left;
 }
 
